Execute run script in CI